Fixed Clipping of 3D map when media panels were out

--- a/app/globals.css
+++ b/app/globals.css
@@ -100,6 +100,7 @@ h1, h2 {
 
 .map-container {
   flex: 1;
+  min-height: 0;
   background-color: var(--background-clr-400);
   position: relative;
   overflow: hidden;
